--- a/modules/story-summary/story-summary.html
+++ b/modules/story-summary/story-summary.html
@@ -1436,9 +1436,21 @@
                     <div class="keywords" id="keywords-cloud"></div>
                 </section>
                 <section class="card timeline">
-                    <div class="sec-head">
-                        <div class="sec-title">剧情时间线</div><button class="sec-btn" data-section="events">编辑</button>
+                    <div class="section-head">
+                    <div style="display:flex; align-items:center; gap:12px;">
+                        <h2 class="section-title">事件时间线</h2>
+                        <div id="timeline-manage-ctrl" style="display:none; align-items:center; gap:8px; background:var(--bg2); padding:4px 12px; border-radius:20px; border:1px solid var(--bdr);">
+                            <span style="font-size:12px; color:var(--txt3)">范围:</span>
+                            <input type="number" id="mg-start" min="1" placeholder="始" style="width:45px; background:transparent; border:none; border-bottom:1px solid var(--bdr); color:inherit; text-align:center;">
+                            <span style="font-size:12px; color:var(--txt3)">至</span>
+                            <input type="number" id="mg-end" min="1" placeholder="末" style="width:45px; background:transparent; border:none; border-bottom:1px solid var(--bdr); color:inherit; text-align:center;">
+                            <button class="btn btn-sm" id="btn-mg-merge" title="合并选定事件" style="padding:2px 8px; font-size:11px;">合并</button>
+                            <button class="btn btn-sm btn-del" id="btn-mg-del" title="删除选定事件" style="padding:2px 8px; font-size:11px;">删除</button>
+                        </div>
                     </div>
+                    <button class="sec-btn" id="btn-toggle-mg" style="font-size:11px; padding:2px 8px;">管理</button>
+                    <button class="sec-btn" data-section="events">编辑</button>
+                </div>
                     <div class="tl-list scroll" id="timeline-list"></div>
                 </section>
             </div>
@@ -1687,7 +1699,13 @@
             c.innerHTML = `<div class="prof-arc"><div><div class="prof-name">${sName}</div><div class="prof-traj">${sTraj}</div></div><div class="prof-prog-wrap"><div class="prof-prog-lbl"><span>弧光进度</span><span>${Math.round((arc.progress || 0) * 100)}%</span></div><div class="prof-prog"><div class="prof-prog-inner" style="width:${(arc.progress || 0) * 100}%"></div></div></div>${moments.length ? `<div class="prof-moments"><div class="prof-moments-title">关键时刻</div>${moments.map(m => `<div class="prof-moment">${h(m)}</div>`).join('')}</div>` : ''}</div><div class="prof-rels"><div class="rels-group"><div class="rels-group-title">${sName}对别人的羁绊：</div>${outRels.length ? outRels.map(r => `<div class="rel-item"><span class="rel-target">对${h(r.to)}：</span><span class="rel-label">${h(r.label || '—')}</span>${r.trend ? `<span class="rel-trend ${trendClass[r.trend] || ''}">${h(r.trend)}</span>` : ''}</div>`).join('') : '<div class="empty" style="padding:16px">暂无关系记录</div>'}</div><div class="rels-group"><div class="rels-group-title">别人对${sName}的羁绊：</div>${inRels.length ? inRels.map(r => `<div class="rel-item"><span class="rel-target">${h(r.from)}：</span><span class="rel-label">${h(r.label || '—')}</span>${r.trend ? `<span class="rel-trend ${trendClass[r.trend] || ''}">${h(r.trend)}</span>` : ''}</div>`).join('') : '<div class="empty" style="padding:16px">暂无关系记录</div>'}</div></div>`
         }
         function renderArcs(arcs) { summaryData.arcs = arcs || []; updateCharacterSelector(arcs || []); renderCharacterProfile() }
-        function updateStats(s) { if (!s) return; $('stat-summarized').textContent = s.summarizedUpTo ?? 0; $('stat-events').textContent = s.eventsCount ?? 0; const p = s.pendingFloors ?? 0; $('stat-pending').textContent = p; $('pending-warning').classList.toggle('hidden', p !== -1) }
+        function updateStats(s) { 
+            if (!s) return; 
+            $('stat-events').textContent = s.eventsCount ?? 0; 
+            const p = s.pendingFloors ?? 0; 
+            $('stat-pending').textContent = p; 
+            $('pending-warning').classList.toggle('hidden', p !== -1);
+        }
 
         function openRelationsFullscreen() { const m = $('rel-fs-modal'); m.classList.add('active'); const dom = $('relation-chart-fullscreen'); if (!relationChartFullscreen) relationChartFullscreen = echarts.init(dom); if (!allNodes.length) { relationChartFullscreen.clear(); return } relationChartFullscreen.setOption({ tooltip: { show: false }, hoverLayerThreshold: Infinity, series: [{ type: 'graph', layout: 'force', roam: true, draggable: true, animation: true, animationDuration: 800, animationDurationUpdate: 300, animationEasingUpdate: 'cubicInOut', progressive: 0, hoverAnimation: false, data: allNodes.map(n => ({ ...n, symbolSize: Array.isArray(n.symbolSize) ? [n.symbolSize[0] * 1.3, n.symbolSize[1] * 1.3] : n.symbolSize * 1.3, label: { ...n.label, fontSize: 14 } })), links: allLinks.map(l => ({ ...l, label: { ...l.label, fontSize: 18 } })), force: { repulsion: 700, edgeLength: [150, 280], gravity: .06, friction: .6, layoutAnimation: true }, label: { show: true }, edgeLabel: { show: true, position: 'middle' }, emphasis: { disabled: true } }] }); setTimeout(() => relationChartFullscreen.resize(), 100); postMsg('FULLSCREEN_OPENED') }
         function closeRelationsFullscreen() { $('rel-fs-modal').classList.remove('active'); postMsg('FULLSCREEN_CLOSED') }
@@ -1720,6 +1738,34 @@
         $('btn-connect').onclick = fetchModels;
         $('api-model-select').onchange = e => { config.api.model = e.target.value };
         $('btn-clear').onclick = () => postMsg('REQUEST_CLEAR');
+        $('btn-toggle-mg').onclick = () => {
+            const ctrl = $('timeline-manage-ctrl');
+            const isVisible = ctrl.style.display === 'flex';
+            ctrl.style.display = isVisible ? 'none' : 'flex';
+            $('btn-toggle-mg').textContent = isVisible ? '管理' : '取消';
+        };
+        const getMgRange = () => {
+            const s = parseInt($('mg-start').value), e = parseInt($('mg-end').value);
+            if (isNaN(s) || isNaN(e) || s < 1 || e < s || e > summaryData.events.length) {
+                alert('请输入有效的事件序号范围（1到' + summaryData.events.length + '）');
+                return null;
+            }
+            return { start: s - 1, end: e - 1 };
+        };
+        $('btn-mg-del').onclick = () => {
+            const r = getMgRange();
+            if (!r) return;
+            if (confirm(`确定要删除从第 ${r.start + 1} 条到第 ${r.end + 1} 条共 ${r.end - r.start + 1} 个事件吗？此操作不可撤销。`)) {
+                postMsg('MG_DELETE_EVENTS', { range: r });
+            }
+        };
+        $('btn-mg-merge').onclick = () => {
+            const r = getMgRange();
+            if (!r) return;
+            if (confirm(`确定要把第 ${r.start + 1} 条到第 ${r.end + 1} 条事件合并吗？这会消耗 API 额度，且不可撤销。`)) {
+                postMsg('MG_MERGE_EVENTS', { range: r, config: { api: config.api, gen: config.gen } });
+            }
+        };
         $('btn-generate').onclick = () => { const btn = $('btn-generate'); if (!localGenerating) { localGenerating = true; btn.textContent = '停止'; postMsg('REQUEST_GENERATE', { config: { api: config.api, gen: config.gen, trigger: config.trigger } }) } else { localGenerating = false; btn.textContent = '总结'; postMsg('REQUEST_CANCEL') } };
         $('hide-summarized').onchange = e => postMsg('TOGGLE_HIDE_SUMMARIZED', { enabled: e.target.checked });
         $('keep-visible-count').onchange = e => { const c = Math.max(0, Math.min(50, parseInt(e.target.value) || 3)); e.target.value = c; postMsg('UPDATE_KEEP_VISIBLE', { count: c }) };
