--- a/modules/story-summary/story-summary.html
+++ b/modules/story-summary/story-summary.html
@@ -1420,6 +1420,11 @@
                         id="keep-visible-count" min="0" max="50" value="3">楼）</span>
             </label>
             <span class="spacer"></span>
+            <button class="btn btn-icon" id="btn-manager" title="管理消息中的冗余元数据 (如 TavernDB)">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M19 11H5M19 11C20.1046 11 21 11.8954 21 13V19C21 20.1046 20.1046 21 19 21H5C3.89543 21 3 20.1046 3 19V13C3 11.8954 3.89543 11 5 11" />
+                    <path d="M7 11V7C7 4.23858 9.23858 2 12 2C14.7614 2 17 4.23858 17 7V11" />
+                </svg>管理</button>
             <button class="btn btn-icon" id="btn-settings"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor"
                     stroke-width="2">
                     <circle cx="12" cy="12" r="3" />
@@ -1625,6 +1630,38 @@
     </div>
     </div>
 
+    <div class="modal" id="manager-modal">
+        <div class="modal-bg" id="manager-backdrop"></div>
+        <div class="modal-box">
+            <div class="modal-head">
+                <h2>元数据管理器</h2><button class="modal-close" id="manager-close"><svg viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2">
+                        <line x1="18" y1="6" x2="6" y2="18" />
+                        <line x1="6" y1="6" x2="18" y2="18" />
+                    </svg></button>
+            </div>
+            <div class="modal-body">
+                <div class="settings-section">
+                    <div class="settings-section-title">冗余字段清理 (Pruner)</div>
+                    <div class="settings-hint">此工具将遍历当前聊天记录的所有消息，删除匹配指定字符的字段。例如输入 <strong>TavernDB</strong> 将删除所有包含该字符的 JSON 键。</div>
+                    <div class="settings-row" style="margin-top: 16px;">
+                        <div class="settings-field full">
+                            <label>模糊匹配关键词</label>
+                            <input type="text" id="prune-pattern" placeholder="例如：TavernDB" value="TavernDB">
+                        </div>
+                    </div>
+                </div>
+                <div id="pruning-result" style="display:none; margin-top:16px; padding:12px; border:1px solid var(--bdr); background:var(--bg3); font-size:13px; line-height:1.6;">
+                    清理完成：影响了 <strong id="res-mes-count">0</strong> 条消息，共删除了 <strong id="res-fields-count">0</strong> 个冗余字段。
+                </div>
+            </div>
+            <div class="modal-foot">
+                <button class="btn" id="manager-cancel">关闭</button>
+                <button class="btn btn-p btn-del" id="btn-execute-prune">执行清理</button>
+            </div>
+        </div>
+    </div>
+
     <div class="modal fullscreen" id="rel-fs-modal">
         <div class="modal-bg" id="rel-fs-backdrop"></div>
         <div class="modal-box">
@@ -1734,12 +1771,25 @@
         function closeSettings(save) { if (save) { const pn = id => { const v = $(id).value; return v === '' ? null : parseFloat(v) }; const provider = $('api-provider').value, pv = providerDefaults[provider] || providerDefaults.custom; config.api.provider = provider; config.api.url = $('api-url').value; config.api.key = $('api-key').value; config.api.model = provider === 'st' ? '' : pv.needManualModel ? $('api-model-text').value : $('api-model-select').value; config.gen.temperature = pn('gen-temp'); config.gen.top_p = pn('gen-top-p'); config.gen.top_k = pn('gen-top-k'); config.gen.presence_penalty = pn('gen-presence'); config.gen.frequency_penalty = pn('gen-frequency'); const timing = $('trigger-timing').value; config.trigger.timing = timing; config.trigger.enabled = timing === 'manual' ? false : $('trigger-enabled').checked; config.trigger.interval = parseInt($('trigger-interval').value) || 20; config.trigger.useStream = $('trigger-stream').checked; config.trigger.maxPerRun = parseInt($('trigger-max-per-run').value) || 100; config.trigger.wrapperHead = $('trigger-wrapper-head').value; config.trigger.wrapperTail = $('trigger-wrapper-tail').value; config.trigger.forceInsertAtEnd = $('trigger-insert-at-end').checked; saveConfig() } $('settings-modal').classList.remove('active'); postMsg('SETTINGS_CLOSED') }
         async function fetchModels() { const btn = $('btn-connect'), provider = $('api-provider').value; if (!providerDefaults[provider]?.canFetch) { alert('当前渠道不支持自动拉取模型'); return } let baseUrl = $('api-url').value.trim().replace(/\/+$/, ''); const apiKey = $('api-key').value.trim(); if (!apiKey) { alert('请先填写 API KEY'); return } btn.disabled = true; btn.textContent = '连接中...'; try { const tryFetch = async url => { const res = await fetch(url, { headers: { Authorization: `Bearer ${apiKey}`, Accept: 'application/json' } }); return res.ok ? (await res.json())?.data?.map(m => m?.id).filter(Boolean) || null : null }; if (baseUrl.endsWith('/v1')) baseUrl = baseUrl.slice(0, -3); let models = await tryFetch(`${baseUrl}/v1/models`); if (!models) models = await tryFetch(`${baseUrl}/models`); if (!models?.length) throw new Error('未获取到模型列表'); config.api.modelCache = [...new Set(models)]; const sel = $('api-model-select'); sel.innerHTML = config.api.modelCache.map(m => `<option value="${m}">${m}</option>`).join(''); $('api-model-select-row').classList.remove('hidden'); if (!config.api.model && models.length) { config.api.model = models[0]; sel.value = models[0] } else if (config.api.model) sel.value = config.api.model; saveConfig(); alert(`成功获取 ${models.length} 个模型`) } catch (e) { alert('连接失败：' + (e.message || '请检查 URL 和 KEY')) } finally { btn.disabled = false; btn.textContent = '连接 / 拉取模型列表' } }
 
+        function openManager() { $('manager-modal').classList.add('active'); $('pruning-result').style.display = 'none'; postMsg('MANAGER_OPENED'); }
+        function closeManager() { $('manager-modal').classList.remove('active'); postMsg('MANAGER_CLOSED'); }
+        function executePrune() {
+            const pattern = $('prune-pattern').value.trim();
+            if (!pattern) return alert('请输入匹配关键词');
+            if (confirm(`确定要清理所有包含 "${pattern}" 字段的消息数据吗？\n警告：此操作不可撤销，请确保已备份存档！`)) {
+                postMsg('REQUEST_PRUNE_FIELDS', { pattern });
+            }
+        }
+
         $$('.sec-btn[data-section]').forEach(b => b.onclick = () => openEditor(b.dataset.section));
         $('editor-backdrop').onclick = $('editor-close').onclick = $('editor-cancel').onclick = closeEditor;
         $('editor-save').onclick = saveEditor;
         $('btn-settings').onclick = openSettings;
         $('settings-backdrop').onclick = $('settings-close').onclick = $('settings-cancel').onclick = () => closeSettings(false);
         $('settings-save').onclick = () => closeSettings(true);
+        $('btn-manager').onclick = openManager;
+        $('manager-backdrop').onclick = $('manager-close').onclick = $('manager-cancel').onclick = closeManager;
+        $('btn-execute-prune').onclick = executePrune;
         $('api-provider').onchange = e => { const pv = providerDefaults[e.target.value]; $('api-url').value = ''; if (!pv.canFetch) config.api.modelCache = []; updateProviderUI(e.target.value) };
         $('btn-connect').onclick = fetchModels;
         $('api-model-select').onchange = e => { config.api.model = e.target.value };
@@ -1807,6 +1857,11 @@
                 } else {
                     sd.style.display = 'none';
                 }
+                break;
+            case 'PRUNE_RESULT':
+                $('pruning-result').style.display = 'block';
+                $('res-mes-count').textContent = d.affectedMessages;
+                $('res-fields-count').textContent = d.deletedFields;
                 break;
             case 'SUMMARY_CLEARED': const t = d.payload?.totalFloors || 0; $('stat-events').textContent = 0; $('start-floor-input').value = 1; $('stat-pending').textContent = t; $('summarized-count').textContent = 0; summaryData = { keywords: [], events: [], characters: { main: [], relationships: [] }, arcs: [] }; renderKeywords([]); renderTimeline([]); renderRelations(null); renderArcs([]); break; 
             case 'LOAD_PANEL_CONFIG': if (d.config) { applyConfig(d.config); } break } };
